--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <head>
 <meta charset="utf-8">
 <title>DataFacil | Tu mejor herramienta</title>
+<meta name="description" content="Web oficial de la apk DataFacil" />
+<meta name="keywords" content="apk,herramienta,util,etecsa,cubacel" />
 <link rel="shortcut icon" href="img/icon.png" />
 <link rel="stylesheet" type="text/css" href="css/global.css">
 <script src="js/html5.js"></script>
