--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ window.onload = function()
 <article class="banner pngFix">
 	<div class="wrap banner_float" id="animate-3d">
 		<div class="animate-item">
+			<img src="img/icon.png">
             <h1>Tu mejor herramienta</h1>
 			<h2>DataFacil</h2>
 			<a href="DataFacil.apk" title="Descargar DataFacil">Descargar</a>
