--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@ window.onload = function()
 <!-- BANNER START -->
 <article class="banner pngFix">
 	<div class="wrap banner_float" id="animate-3d">
-		<div class="animate-item">
-			<img src="img/icon.png">
-            <h1>Tu mejor herramienta</h1>
-			<h2>DataFacil</h2>
+		<div class="animate-item">            
+			<h2><img src="img/icon.png"><br>DataFacil</h2>
+			<h1>Tu mejor herramienta</h1>
 			<a href="DataFacil.apk" title="Descargar DataFacil">Descargar</a>
 			<p>Version: 6.5<span>/</span>Size: 3.67MB<span>/</span>Update: 2021-09-22</p>
 		</div>
