--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ window.onload = function()
 <article class="banner pngFix">
 	<div class="wrap banner_float" id="animate-3d">
 		<div class="animate-item">
-			<h1>Tu mejor herramienta</h1>            
-			<h2><!--img src="img/icon.png"><br-->DataFacil</h2>
+			<h1><img src="img/icon.png" width="100" height="100"></h1>            
+			<h2>DataFacil</h2>
 			<a href="DataFacil.apk" title="Descargar DataFacil">Descargar</a>
 			<p>Version: 6.5<span>/</span>Size: 3.67MB<span>/</span>Update: 2021-09-22</p>
 		</div>
