--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ window.onload = function()
 		<div class="animate-item">
 			<h1><img src="img/icon.png" width="100" height="100"></h1>            
 			<h2>DataFacil</h2>
-			<a href="DataFacil.apk" title="Descargar DataFacil">Descargar</a>
+			<a href="DataFacil.apk" title="Descargar DataFacil">Descargar APK</a>
 			<p>Version: 6.5<span>/</span>Size: 3.67MB<span>/</span>Update: 2021-09-22</p>
 		</div>
 	</div>
