--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 <nav class="nav-menu">
 <ul>
 <li class="active"><a href="index.html#home">Home</a></li>
-<li><a href="index.html#feature">Features</a></li>
 <li><a href="index.html#screenshot">Screenshot</a></li>
 <li><a href="index.html#contact">Contact</a></li>
 </ul>
@@ -68,7 +67,7 @@
 <h6 style="color: white;">Version: 6.5</h6>
 <h6 style="color: white;">Tamaño: 3.67Mb</h6>
 <h5>Tu mejor herramienta</h5>
-<a class="expand-video" href="DataFacil.apk"><i class="fa fa-download"></i>Descargar APK</a>
+<a href="DataFacil.apk"><i class="fa fa-download"></i>Descargar APK</a>
 </div>
 </div>
 </div>
