--- a/index.html
+++ b/index.html
@@ -89,9 +89,8 @@
 <div class="col-md-6 col-sm-6 col-xs-12 d-flex flex-center">
 <div class="about-content">
 <p>DataFacil tiene todo lo que buscas para tus Paquetes de Datos. Nuestro objetivo es llevar a nuestros usuarios las mejores utilidades con la mejor experiencia y comodidad posibles.</p>
-<p>Seguimos trabajando en crear más funciones realmente utiles para todos. Ya tenemos unas cuantas ideas en mente, pero si tienes alguna, no dudes en dejarnos tu comentario o escribirnos a nuestro correo electrónico.</p>
-<p>¿Es gratis DataFacil?</p>
-<p>SI</p>  
+<p>Seguimos trabajando en crear más funciones realmente utiles para todos. Ya tenemos unas cuantas ideas en mente, pero si tienes alguna, no dudes en dejarnos tu comentario.</p>
+  
 </div>
 </div>
 </div>
