--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 <div class="main-menu">
 <nav class="nav-menu">
 <ul>
-<li class="active"><a href="index.html#home">Home</a></li>
-<li><a href="index.html#screenshot">Screenshot</a></li>
-<li><a href="index.html#contact">Contact</a></li>
+<li class="active"><a href="#home">Home</a></li>
+<li><a href="#screenshot">Screenshot</a></li>
+<li><a href="#contact">Contact</a></li>
 </ul>
 </nav>
 </div>
