--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <h6 style="color: white;">Version: 6.5</h6>
 <h6 style="color: white;">Tamaño: 3.67Mb</h6>
 <h5>Tu mejor herramienta</h5>
-<a href="https://yourlink.cc/d91b6e405c"><i class="fa fa-download"></i>Descargar APK</a>
+<a href="https://try2link.com/NqvDX4w"><i class="fa fa-download"></i>Descargar APK</a>
 </div>
 </div>
 </div>
