--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="menu-area">
 <div class="col-md-3 col-sm-12 col-xs-12">
 <div class="logo">
-<a href="index.html"><img src="logo_full.png" alt="Zeedapp - App Landing Template" data-pagespeed-url-hash="2312565467" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" width="174"></a>
+<a href="index.html"><img src="logo_full.png" alt="DataFacil" data-pagespeed-url-hash="2312565467" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" width="174"></a>
 </div>
 </div>
 <div class="col-md-9 hidden-xs hidden-sm">
