--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 <div class="col-md-6 col-sm-6 col-xs-12">
 <div class="row">
 <div class="slider-inner text-right">
+  <img src="assets/img/icon/icon.png" width="100px">
 <h2>DataFacil</h2>
 <h6 style="color: white;">Version: 6.7</h6>
 <h6 style="color: white;">Rev: 210930</h6>
