--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <h6 style="color: white;">Rev: 210930</h6>
 <h6 style="color: white;">Tamaño: 4.59Mb</h6>
 <h5>Tu mejor herramienta</h5>
-<a href="https://eljoker63.github.io/DataFacil/DataFacil.apk"><i class="fa fa-download"></i>Descargar APK</a>
+<a href="https://eljoker63.github.io/DataFacil/DataFacil.apk" style="background-color: white;color: #5c1ef9;"><i class="fa fa-download" style="color: #5c1ef9;"></i>Descargar APK</a>
 </div>
 </div>
 </div>
