--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             </li>
                             <li class="nav-item"><a class="nav-link" href="index.html#features">CARACTERÍSTICAS</a></li>
                             <li class="nav-item"><a class="nav-link" href="index.html#mobile">ANDROID</a></li>
-                            <li class="nav-item"><a class="nav-link" href="index.html#desktop">Windows Phone</a></li>
+                            <li class="nav-item"><a class="nav-link" href="index.html#desktop">WINDOWS PHONE</a></li>
                             <li class="nav-item"><a href="index.html#download" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">
                                 <span class="ti-download"></span><span style="padding-left: 5px;">DESCARGAR</span></a>
                             </li>
