--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description"
-          content="Gestor de descargas para enalces gratis en la nube con soporte para varios formatos.">
-    <meta name="keywords" content="xdownloader, descargas, gestor de descargas, manejador de descargas">
+          content="Tu mejor herramienta.">
+    <meta name="keywords" content="">
     <link rel="icon" type="image/x-icon" href="images/icon.png">
 
     <!-- Font -->
